<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RedBoyljl</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">首页</string>
    <string name="search">搜索</string>
    <string name="brand">品牌</string>
    <string name="more">更多</string>
    <string name="cart">购物车</string>
    <string name="personal_information">个人中心</string>

</resources>